trunk/Archive2/01/ad8a1144e83491/output
main.cpp:13:2: error: 'hrtrth' does not name a type
 }hrtrth
  ^
